gcc/testsuite/gdc.test/fail_compilation/fail207.d
/*
TEST_OUTPUT:
---
fail_compilation/fail207.d(10): Error: found end of file instead of initializer
fail_compilation/fail207.d(10): Error: semicolon expected, not `EOF`
---
*/

int x = {
